# billing-anomaly-detector

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a58901b72a94_initial_schema.py
docs/adr/: 001-anomaly-detection-approach.md  002-ensemble-detection.md
scripts/etl/: load_data.py
scripts/eval/: eval_detection.py
src/billing_anomaly_detector/: __init__.py
src/billing_anomaly_detector/api/: app.py  dependencies.py  schemas.py
src/billing_anomaly_detector/api/routes/: anomalies.py  invoices.py
src/billing_anomaly_detector/application/services/: cosine_scorer.py  invoice_text.py
src/billing_anomaly_detector/application/use_cases/: detect_anomalies.py  explain_anomaly.py  index_invoices.py
src/billing_anomaly_detector/domain/: entities.py  events.py  ports.py  value_objects.py
src/billing_anomaly_detector/infrastructure/: config.py
src/billing_anomaly_detector/infrastructure/ai/: embedding_adapter.py  explanation_chain.py
src/billing_anomaly_detector/infrastructure/persistence/: anomaly_repository.py  database.py  invoice_repository.py  models.py
tests/: conftest.py
tests/integration/: conftest.py  test_repositories.py
tests/unit/: test_cosine_scorer.py  test_entities.py  test_invoice_text.py  test_use_cases.py  test_value_objects.py
