[project]
name = "billing-anomaly-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ricardo Thomas", email = "rykert@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "langchain-openai>=1.3.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pgvector>=0.4.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "scikit-learn>=1.9.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
billing-anomaly-detector = "billing_anomaly_detector:main"

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
    "testcontainers>=4.14.2",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501", "I001", "UP007", "UP035"]
